--- a/test_with_exported.ipynb
+++ b/test_with_exported.ipynb
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plots"
+    "## Plots and Interpretation"
    ]
   },
   {
@@ -1006,6 +1006,22 @@
     "plt.ylabel(\"Number of people detected\")\n",
     "plt.title(\"Number of people in the student center by hour of day\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two things of note:\n",
+    "\n",
+    "1) we can see that during the day time (9am-11pm) the model does a really good job of detecting people in the pattern we would expect for a campus building, however, we can see at night the model makes a lot of false positives! This is probably because my training data did not include many night time pictures\n"
    ]
   }
  ],
