--- a/crop.ipynb
+++ b/crop.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['2023_07_18__04_42.jpg',\n",
+       "['2023_07_17__17_34.jpg',\n",
+       " '2023_07_17__17_44.jpg',\n",
+       " '2023_07_17__17_55.jpg',\n",
+       " '2023_07_17__18_05.jpg',\n",
+       " '2023_07_17__18_15.jpg',\n",
+       " '2023_07_17__18_25.jpg',\n",
+       " '2023_07_17__18_36.jpg',\n",
+       " '2023_07_17__18_46.jpg',\n",
+       " '2023_07_17__18_57.jpg',\n",
+       " '2023_07_17__19_07.jpg',\n",
+       " '2023_07_17__19_18.jpg',\n",
+       " '2023_07_17__19_28.jpg',\n",
+       " '2023_07_17__19_38.jpg',\n",
+       " '2023_07_17__19_48.jpg',\n",
+       " '2023_07_17__19_58.jpg',\n",
+       " '2023_07_17__20_09.jpg',\n",
+       " '2023_07_17__20_19.jpg',\n",
+       " '2023_07_17__20_30.jpg',\n",
+       " '2023_07_17__20_41.jpg',\n",
+       " '2023_07_17__20_51.jpg',\n",
+       " '2023_07_17__21_01.jpg',\n",
+       " '2023_07_17__21_12.jpg',\n",
+       " '2023_07_17__21_22.jpg',\n",
+       " '2023_07_17__21_32.jpg',\n",
+       " '2023_07_17__21_42.jpg',\n",
+       " '2023_07_17__21_53.jpg',\n",
+       " '2023_07_17__22_03.jpg',\n",
+       " '2023_07_17__22_13.jpg',\n",
+       " '2023_07_17__22_23.jpg',\n",
+       " '2023_07_17__22_34.jpg',\n",
+       " '2023_07_17__22_45.jpg',\n",
+       " '2023_07_17__22_56.jpg',\n",
+       " '2023_07_17__23_06.jpg',\n",
+       " '2023_07_17__23_16.jpg',\n",
+       " '2023_07_17__23_27.jpg',\n",
+       " '2023_07_17__23_37.jpg',\n",
+       " '2023_07_17__23_47.jpg',\n",
+       " '2023_07_17__23_57.jpg',\n",
+       " '2023_07_18__00_08.jpg',\n",
+       " '2023_07_18__00_19.jpg',\n",
+       " '2023_07_18__00_29.jpg',\n",
+       " '2023_07_18__00_39.jpg',\n",
+       " '2023_07_18__00_50.jpg',\n",
+       " '2023_07_18__01_01.jpg',\n",
+       " '2023_07_18__01_12.jpg',\n",
+       " '2023_07_18__01_22.jpg',\n",
+       " '2023_07_18__01_33.jpg',\n",
+       " '2023_07_18__01_44.jpg',\n",
+       " '2023_07_18__01_54.jpg',\n",
+       " '2023_07_18__02_04.jpg',\n",
+       " '2023_07_18__02_15.jpg',\n",
+       " '2023_07_18__02_25.jpg',\n",
+       " '2023_07_18__02_36.jpg',\n",
+       " '2023_07_18__02_46.jpg',\n",
+       " '2023_07_18__02_57.jpg',\n",
+       " '2023_07_18__03_07.jpg',\n",
+       " '2023_07_18__03_18.jpg',\n",
+       " '2023_07_18__03_28.jpg',\n",
+       " '2023_07_18__03_39.jpg',\n",
+       " '2023_07_18__03_49.jpg',\n",
+       " '2023_07_18__03_59.jpg',\n",
+       " '2023_07_18__04_10.jpg',\n",
+       " '2023_07_18__04_21.jpg',\n",
+       " '2023_07_18__04_32.jpg',\n",
+       " '2023_07_18__04_42.jpg',\n",
        " '2023_07_18__04_53.jpg',\n",
        " '2023_07_18__05_03.jpg',\n",
        " '2023_07_18__05_14.jpg',\n",
@@ -216,10 +280,392 @@
        " '2023_07_19__23_16.jpg',\n",
        " '2023_07_19__23_27.jpg',\n",
        " '2023_07_19__23_37.jpg',\n",
-       " '2023_07_19__23_48.jpg']"
+       " '2023_07_19__23_48.jpg',\n",
+       " '2023_07_19__23_59.jpg',\n",
+       " '2023_07_20__00_09.jpg',\n",
+       " '2023_07_20__00_20.jpg',\n",
+       " '2023_07_20__00_31.jpg',\n",
+       " '2023_07_20__00_41.jpg',\n",
+       " '2023_07_20__00_51.jpg',\n",
+       " '2023_07_20__01_02.jpg',\n",
+       " '2023_07_20__01_13.jpg',\n",
+       " '2023_07_20__01_24.jpg',\n",
+       " '2023_07_20__01_35.jpg',\n",
+       " '2023_07_20__01_45.jpg',\n",
+       " '2023_07_20__01_55.jpg',\n",
+       " '2023_07_20__02_06.jpg',\n",
+       " '2023_07_20__02_17.jpg',\n",
+       " '2023_07_20__02_27.jpg',\n",
+       " '2023_07_20__02_38.jpg',\n",
+       " '2023_07_20__02_48.jpg',\n",
+       " '2023_07_20__02_58.jpg',\n",
+       " '2023_07_20__03_09.jpg',\n",
+       " '2023_07_20__03_20.jpg',\n",
+       " '2023_07_20__03_31.jpg',\n",
+       " '2023_07_20__03_42.jpg',\n",
+       " '2023_07_20__03_52.jpg',\n",
+       " '2023_07_20__04_03.jpg',\n",
+       " '2023_07_20__04_13.jpg',\n",
+       " '2023_07_20__04_23.jpg',\n",
+       " '2023_07_20__04_34.jpg',\n",
+       " '2023_07_20__04_45.jpg',\n",
+       " '2023_07_20__04_55.jpg',\n",
+       " '2023_07_20__05_05.jpg',\n",
+       " '2023_07_20__05_15.jpg',\n",
+       " '2023_07_20__05_25.jpg',\n",
+       " '2023_07_20__05_36.jpg',\n",
+       " '2023_07_20__05_46.jpg',\n",
+       " '2023_07_20__05_57.jpg',\n",
+       " '2023_07_20__06_07.jpg',\n",
+       " '2023_07_20__06_17.jpg',\n",
+       " '2023_07_20__06_28.jpg',\n",
+       " '2023_07_20__06_39.jpg',\n",
+       " '2023_07_20__06_49.jpg',\n",
+       " '2023_07_20__06_59.jpg',\n",
+       " '2023_07_20__07_10.jpg',\n",
+       " '2023_07_20__07_21.jpg',\n",
+       " '2023_07_20__07_31.jpg',\n",
+       " '2023_07_20__07_42.jpg',\n",
+       " '2023_07_20__07_52.jpg',\n",
+       " '2023_07_20__08_03.jpg',\n",
+       " '2023_07_20__08_13.jpg',\n",
+       " '2023_07_20__08_23.jpg',\n",
+       " '2023_07_20__08_34.jpg',\n",
+       " '2023_07_20__08_45.jpg',\n",
+       " '2023_07_20__08_55.jpg',\n",
+       " '2023_07_20__09_06.jpg',\n",
+       " '2023_07_20__09_16.jpg',\n",
+       " '2023_07_20__09_27.jpg',\n",
+       " '2023_07_20__09_38.jpg',\n",
+       " '2023_07_20__09_49.jpg',\n",
+       " '2023_07_20__09_59.jpg',\n",
+       " '2023_07_20__10_10.jpg',\n",
+       " '2023_07_20__10_21.jpg',\n",
+       " '2023_07_20__10_31.jpg',\n",
+       " '2023_07_20__10_41.jpg',\n",
+       " '2023_07_20__10_51.jpg',\n",
+       " '2023_07_20__11_02.jpg',\n",
+       " '2023_07_20__11_12.jpg',\n",
+       " '2023_07_20__11_23.jpg',\n",
+       " '2023_07_20__11_33.jpg',\n",
+       " '2023_07_20__11_44.jpg',\n",
+       " '2023_07_20__11_54.jpg',\n",
+       " '2023_07_20__12_05.jpg',\n",
+       " '2023_07_20__12_16.jpg',\n",
+       " '2023_07_20__12_26.jpg',\n",
+       " '2023_07_20__12_36.jpg',\n",
+       " '2023_07_20__12_47.jpg',\n",
+       " '2023_07_20__12_58.jpg',\n",
+       " '2023_07_20__13_08.jpg',\n",
+       " '2023_07_20__13_19.jpg',\n",
+       " '2023_07_20__13_29.jpg',\n",
+       " '2023_07_20__13_40.jpg',\n",
+       " '2023_07_20__13_51.jpg',\n",
+       " '2023_07_20__14_02.jpg',\n",
+       " '2023_07_20__14_12.jpg',\n",
+       " '2023_07_20__14_22.jpg',\n",
+       " '2023_07_20__14_33.jpg',\n",
+       " '2023_07_20__14_44.jpg',\n",
+       " '2023_07_20__14_54.jpg',\n",
+       " '2023_07_20__15_05.jpg',\n",
+       " '2023_07_20__15_15.jpg',\n",
+       " '2023_07_20__15_25.jpg',\n",
+       " '2023_07_20__15_36.jpg',\n",
+       " '2023_07_20__15_47.jpg',\n",
+       " '2023_07_20__15_58.jpg',\n",
+       " '2023_07_20__16_09.jpg',\n",
+       " '2023_07_20__16_20.jpg',\n",
+       " '2023_07_20__16_30.jpg',\n",
+       " '2023_07_20__16_40.jpg',\n",
+       " '2023_07_20__16_51.jpg',\n",
+       " '2023_07_20__17_02.jpg',\n",
+       " '2023_07_20__17_12.jpg',\n",
+       " '2023_07_20__17_22.jpg',\n",
+       " '2023_07_20__17_32.jpg',\n",
+       " '2023_07_20__17_43.jpg',\n",
+       " '2023_07_20__17_54.jpg',\n",
+       " '2023_07_20__18_05.jpg',\n",
+       " '2023_07_20__18_15.jpg',\n",
+       " '2023_07_20__18_25.jpg',\n",
+       " '2023_07_20__18_36.jpg',\n",
+       " '2023_07_20__18_47.jpg',\n",
+       " '2023_07_20__18_57.jpg',\n",
+       " '2023_07_20__19_07.jpg',\n",
+       " '2023_07_20__19_17.jpg',\n",
+       " '2023_07_20__19_28.jpg',\n",
+       " '2023_07_20__19_38.jpg',\n",
+       " '2023_07_20__19_48.jpg',\n",
+       " '2023_07_20__19_59.jpg',\n",
+       " '2023_07_20__20_10.jpg',\n",
+       " '2023_07_20__20_20.jpg',\n",
+       " '2023_07_20__20_31.jpg',\n",
+       " '2023_07_20__20_41.jpg',\n",
+       " '2023_07_20__20_51.jpg',\n",
+       " '2023_07_20__21_02.jpg',\n",
+       " '2023_07_20__21_13.jpg',\n",
+       " '2023_07_20__21_24.jpg',\n",
+       " '2023_07_20__21_35.jpg',\n",
+       " '2023_07_20__21_45.jpg',\n",
+       " '2023_07_20__21_56.jpg',\n",
+       " '2023_07_20__22_07.jpg',\n",
+       " '2023_07_20__22_18.jpg',\n",
+       " '2023_07_20__22_28.jpg',\n",
+       " '2023_07_20__22_38.jpg',\n",
+       " '2023_07_20__22_48.jpg',\n",
+       " '2023_07_20__22_59.jpg',\n",
+       " '2023_07_20__23_09.jpg',\n",
+       " '2023_07_20__23_19.jpg',\n",
+       " '2023_07_20__23_29.jpg',\n",
+       " '2023_07_20__23_40.jpg',\n",
+       " '2023_07_20__23_50.jpg',\n",
+       " '2023_07_21__00_00.jpg',\n",
+       " '2023_07_21__00_11.jpg',\n",
+       " '2023_07_21__00_22.jpg',\n",
+       " '2023_07_21__00_33.jpg',\n",
+       " '2023_07_21__00_43.jpg',\n",
+       " '2023_07_21__00_53.jpg',\n",
+       " '2023_07_21__01_03.jpg',\n",
+       " '2023_07_21__01_14.jpg',\n",
+       " '2023_07_21__01_24.jpg',\n",
+       " '2023_07_21__01_35.jpg',\n",
+       " '2023_07_21__01_45.jpg',\n",
+       " '2023_07_21__01_55.jpg',\n",
+       " '2023_07_21__02_06.jpg',\n",
+       " '2023_07_21__02_17.jpg',\n",
+       " '2023_07_21__02_27.jpg',\n",
+       " '2023_07_21__02_37.jpg',\n",
+       " '2023_07_21__02_48.jpg',\n",
+       " '2023_07_21__02_58.jpg',\n",
+       " '2023_07_21__03_09.jpg',\n",
+       " '2023_07_21__03_20.jpg',\n",
+       " '2023_07_21__03_31.jpg',\n",
+       " '2023_07_21__03_42.jpg',\n",
+       " '2023_07_21__03_52.jpg',\n",
+       " '2023_07_21__04_03.jpg',\n",
+       " '2023_07_21__04_13.jpg',\n",
+       " '2023_07_21__04_23.jpg',\n",
+       " '2023_07_21__04_34.jpg',\n",
+       " '2023_07_21__04_45.jpg',\n",
+       " '2023_07_21__04_56.jpg',\n",
+       " '2023_07_21__05_06.jpg',\n",
+       " '2023_07_21__05_16.jpg',\n",
+       " '2023_07_21__05_27.jpg',\n",
+       " '2023_07_21__05_38.jpg',\n",
+       " '2023_07_21__05_48.jpg',\n",
+       " '2023_07_21__05_58.jpg',\n",
+       " '2023_07_21__06_09.jpg',\n",
+       " '2023_07_21__06_19.jpg',\n",
+       " '2023_07_21__06_30.jpg',\n",
+       " '2023_07_21__06_40.jpg',\n",
+       " '2023_07_21__06_51.jpg',\n",
+       " '2023_07_21__07_02.jpg',\n",
+       " '2023_07_21__07_13.jpg',\n",
+       " '2023_07_21__07_23.jpg',\n",
+       " '2023_07_21__07_33.jpg',\n",
+       " '2023_07_21__07_44.jpg',\n",
+       " '2023_07_21__07_55.jpg',\n",
+       " '2023_07_21__08_05.jpg',\n",
+       " '2023_07_21__08_15.jpg',\n",
+       " '2023_07_21__08_26.jpg',\n",
+       " '2023_07_21__08_36.jpg',\n",
+       " '2023_07_21__08_47.jpg',\n",
+       " '2023_07_21__08_57.jpg',\n",
+       " '2023_07_21__09_08.jpg',\n",
+       " '2023_07_21__09_18.jpg',\n",
+       " '2023_07_21__09_29.jpg',\n",
+       " '2023_07_21__09_39.jpg',\n",
+       " '2023_07_21__09_49.jpg',\n",
+       " '2023_07_21__09_59.jpg',\n",
+       " '2023_07_21__10_10.jpg',\n",
+       " '2023_07_21__10_21.jpg',\n",
+       " '2023_07_21__10_31.jpg',\n",
+       " '2023_07_21__10_42.jpg',\n",
+       " '2023_07_21__10_52.jpg',\n",
+       " '2023_07_21__11_03.jpg',\n",
+       " '2023_07_21__11_13.jpg',\n",
+       " '2023_07_21__11_24.jpg',\n",
+       " '2023_07_21__11_35.jpg',\n",
+       " '2023_07_21__11_46.jpg',\n",
+       " '2023_07_21__11_56.jpg',\n",
+       " '2023_07_21__12_07.jpg',\n",
+       " '2023_07_21__12_17.jpg',\n",
+       " '2023_07_21__12_28.jpg',\n",
+       " '2023_07_21__12_39.jpg',\n",
+       " '2023_07_21__12_49.jpg',\n",
+       " '2023_07_21__13_00.jpg',\n",
+       " '2023_07_21__13_10.jpg',\n",
+       " '2023_07_21__13_21.jpg',\n",
+       " '2023_07_21__13_31.jpg',\n",
+       " '2023_07_21__13_47.jpg',\n",
+       " '2023_07_21__13_57.jpg',\n",
+       " '2023_07_21__14_07.jpg',\n",
+       " '2023_07_21__14_18.jpg',\n",
+       " '2023_07_21__14_29.jpg',\n",
+       " '2023_07_21__14_39.jpg',\n",
+       " '2023_07_21__14_50.jpg',\n",
+       " '2023_07_21__15_01.jpg',\n",
+       " '2023_07_21__15_12.jpg',\n",
+       " '2023_07_21__15_22.jpg',\n",
+       " '2023_07_21__15_33.jpg',\n",
+       " '2023_07_21__15_44.jpg',\n",
+       " '2023_07_21__15_54.jpg',\n",
+       " '2023_07_21__16_05.jpg',\n",
+       " '2023_07_21__16_16.jpg',\n",
+       " '2023_07_21__16_26.jpg',\n",
+       " '2023_07_21__16_37.jpg',\n",
+       " '2023_07_21__16_47.jpg',\n",
+       " '2023_07_21__16_58.jpg',\n",
+       " '2023_07_21__17_08.jpg',\n",
+       " '2023_07_21__17_19.jpg',\n",
+       " '2023_07_21__17_29.jpg',\n",
+       " '2023_07_21__17_40.jpg',\n",
+       " '2023_07_21__17_51.jpg',\n",
+       " '2023_07_21__18_02.jpg',\n",
+       " '2023_07_21__18_12.jpg',\n",
+       " '2023_07_21__18_22.jpg',\n",
+       " '2023_07_21__18_33.jpg',\n",
+       " '2023_07_21__18_44.jpg',\n",
+       " '2023_07_21__18_54.jpg',\n",
+       " '2023_07_21__19_15.jpg',\n",
+       " '2023_07_21__19_26.jpg',\n",
+       " '2023_07_21__19_37.jpg',\n",
+       " '2023_07_21__19_48.jpg',\n",
+       " '2023_07_21__19_58.jpg',\n",
+       " '2023_07_21__20_08.jpg',\n",
+       " '2023_07_21__20_19.jpg',\n",
+       " '2023_07_21__20_30.jpg',\n",
+       " '2023_07_21__20_41.jpg',\n",
+       " '2023_07_21__20_51.jpg',\n",
+       " '2023_07_21__21_02.jpg',\n",
+       " '2023_07_21__21_13.jpg',\n",
+       " '2023_07_21__21_23.jpg',\n",
+       " '2023_07_21__21_34.jpg',\n",
+       " '2023_07_21__21_44.jpg',\n",
+       " '2023_07_21__21_54.jpg',\n",
+       " '2023_07_21__22_05.jpg',\n",
+       " '2023_07_21__22_16.jpg',\n",
+       " '2023_07_21__22_26.jpg',\n",
+       " '2023_07_21__22_36.jpg',\n",
+       " '2023_07_21__22_47.jpg',\n",
+       " '2023_07_21__22_58.jpg',\n",
+       " '2023_07_21__23_08.jpg',\n",
+       " '2023_07_21__23_18.jpg',\n",
+       " '2023_07_21__23_29.jpg',\n",
+       " '2023_07_21__23_40.jpg',\n",
+       " '2023_07_21__23_50.jpg',\n",
+       " '2023_07_22__00_01.jpg',\n",
+       " '2023_07_22__00_11.jpg',\n",
+       " '2023_07_22__00_22.jpg',\n",
+       " '2023_07_22__00_32.jpg',\n",
+       " '2023_07_22__00_43.jpg',\n",
+       " '2023_07_22__00_54.jpg',\n",
+       " '2023_07_22__01_04.jpg',\n",
+       " '2023_07_22__01_14.jpg',\n",
+       " '2023_07_22__01_25.jpg',\n",
+       " '2023_07_22__01_36.jpg',\n",
+       " '2023_07_22__01_47.jpg',\n",
+       " '2023_07_22__01_57.jpg',\n",
+       " '2023_07_22__02_08.jpg',\n",
+       " '2023_07_22__02_18.jpg',\n",
+       " '2023_07_22__02_29.jpg',\n",
+       " '2023_07_22__02_40.jpg',\n",
+       " '2023_07_22__02_50.jpg',\n",
+       " '2023_07_22__03_01.jpg',\n",
+       " '2023_07_22__03_12.jpg',\n",
+       " '2023_07_22__03_22.jpg',\n",
+       " '2023_07_22__03_33.jpg',\n",
+       " '2023_07_22__03_43.jpg',\n",
+       " '2023_07_22__03_53.jpg',\n",
+       " '2023_07_22__04_03.jpg',\n",
+       " '2023_07_22__04_14.jpg',\n",
+       " '2023_07_22__04_25.jpg',\n",
+       " '2023_07_22__04_35.jpg',\n",
+       " '2023_07_22__04_45.jpg',\n",
+       " '2023_07_22__04_55.jpg',\n",
+       " '2023_07_22__05_06.jpg',\n",
+       " '2023_07_22__05_16.jpg',\n",
+       " '2023_07_22__05_27.jpg',\n",
+       " '2023_07_22__05_38.jpg',\n",
+       " '2023_07_22__05_48.jpg',\n",
+       " '2023_07_22__05_59.jpg',\n",
+       " '2023_07_22__06_10.jpg',\n",
+       " '2023_07_22__06_20.jpg',\n",
+       " '2023_07_22__06_31.jpg',\n",
+       " '2023_07_22__06_41.jpg',\n",
+       " '2023_07_22__06_52.jpg',\n",
+       " '2023_07_22__07_03.jpg',\n",
+       " '2023_07_22__07_13.jpg',\n",
+       " '2023_07_22__07_23.jpg',\n",
+       " '2023_07_22__07_33.jpg',\n",
+       " '2023_07_22__07_44.jpg',\n",
+       " '2023_07_22__07_54.jpg',\n",
+       " '2023_07_22__08_05.jpg',\n",
+       " '2023_07_22__08_15.jpg',\n",
+       " '2023_07_22__08_26.jpg',\n",
+       " '2023_07_22__08_36.jpg',\n",
+       " '2023_07_22__08_47.jpg',\n",
+       " '2023_07_22__08_57.jpg',\n",
+       " '2023_07_22__09_08.jpg',\n",
+       " '2023_07_22__09_19.jpg',\n",
+       " '2023_07_22__09_29.jpg',\n",
+       " '2023_07_22__09_40.jpg',\n",
+       " '2023_07_22__09_50.jpg',\n",
+       " '2023_07_22__10_01.jpg',\n",
+       " '2023_07_22__10_11.jpg',\n",
+       " '2023_07_22__10_22.jpg',\n",
+       " '2023_07_22__10_33.jpg',\n",
+       " '2023_07_22__10_44.jpg',\n",
+       " '2023_07_22__10_55.jpg',\n",
+       " '2023_07_22__11_05.jpg',\n",
+       " '2023_07_22__11_15.jpg',\n",
+       " '2023_07_22__11_26.jpg',\n",
+       " '2023_07_22__11_37.jpg',\n",
+       " '2023_07_22__11_48.jpg',\n",
+       " '2023_07_22__11_58.jpg',\n",
+       " '2023_07_22__12_08.jpg',\n",
+       " '2023_07_22__12_19.jpg',\n",
+       " '2023_07_22__12_30.jpg',\n",
+       " '2023_07_22__12_40.jpg',\n",
+       " '2023_07_22__12_50.jpg',\n",
+       " '2023_07_22__13_00.jpg',\n",
+       " '2023_07_22__13_11.jpg',\n",
+       " '2023_07_22__13_22.jpg',\n",
+       " '2023_07_22__13_33.jpg',\n",
+       " '2023_07_22__13_44.jpg',\n",
+       " '2023_07_22__13_54.jpg',\n",
+       " '2023_07_22__14_04.jpg',\n",
+       " '2023_07_22__14_14.jpg',\n",
+       " '2023_07_22__14_25.jpg',\n",
+       " '2023_07_22__14_35.jpg',\n",
+       " '2023_07_22__14_46.jpg',\n",
+       " '2023_07_22__14_56.jpg',\n",
+       " '2023_07_22__15_07.jpg',\n",
+       " '2023_07_22__15_17.jpg',\n",
+       " '2023_07_22__15_28.jpg',\n",
+       " '2023_07_22__15_38.jpg',\n",
+       " '2023_07_22__15_49.jpg',\n",
+       " '2023_07_22__15_59.jpg',\n",
+       " '2023_07_22__16_10.jpg',\n",
+       " '2023_07_22__16_21.jpg',\n",
+       " '2023_07_22__16_31.jpg',\n",
+       " '2023_07_22__16_42.jpg',\n",
+       " '2023_07_22__16_52.jpg',\n",
+       " '2023_07_22__17_03.jpg',\n",
+       " '2023_07_22__17_14.jpg',\n",
+       " '2023_07_22__17_24.jpg',\n",
+       " '2023_07_22__17_34.jpg',\n",
+       " '2023_07_22__17_45.jpg',\n",
+       " '2023_07_22__17_55.jpg',\n",
+       " '2023_07_22__18_05.jpg',\n",
+       " '2023_07_22__18_16.jpg',\n",
+       " '2023_07_22__18_26.jpg',\n",
+       " '2023_07_22__18_37.jpg',\n",
+       " '2023_07_22__18_48.jpg',\n",
+       " '2023_07_22__18_58.jpg',\n",
+       " '2023_07_22__19_09.jpg']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
