--- a/crop.ipynb
+++ b/crop.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is this?\n",
+    "This is simple python script to crop the images taken by the camera. This is completely optional, but I found in my testing DRAMATICALLY increase the accuracy of the model and detection since it crops out the highly compressed/pixelated segment of the webcam frames."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "# uncomment this line and the other plotting lines to see what the crop is cropping\n",
+    "# import matplotlib\n",
+    "# import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -17,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this should be the directory with the images to crop\n",
     "TO_CROP = \"frames\""
    ]
   },
@@ -673,6 +683,7 @@
    "source": [
     "from os import walk, path\n",
     "\n",
+    "# get all the images in the given directory\n",
     "filenames = next(walk(TO_CROP), (None, None, []))[2]\n",
     "filenames"
    ]
